Reproducible test case for MDEV-37434

Add debug logging to help with tracing

Add the fix