plugin/server_audit/server_audit.c
@@ -1998,6 +1998,16 @@ static int log_statement(const struct connection_info *cn,
                          const struct mysql_event_general *event,
                          const char *type)
 {
+  DBUG_PRINT("info", ("log_statement: event_subclass=%d, general_command=%.*s, "
+                      "cn->query_id=%lld, cn->query=%.*s, event->query_id=%lld, "
+                      "event->general_query=%.*s, type=%s",
+                        event->event_subclass, event->general_command_length,
+                        event->general_command,
+                        cn->query_id,
+                        cn->query_length == 0x4f4f4f4f ? 0 : cn->query_length,
+                        cn->query == (const char *)0x4f4f4f4f4f4f4f4fL ? NULL : cn->query,
+                        event->query_id, event->general_query_length,
+                        event->general_query, type));
   return log_statement_ex(cn, event->general_time, event->general_thread_id,
                           event->general_query, event->general_query_length,
                           event->general_error_code, type, 1);
@@ -2098,6 +2108,16 @@ static void update_connection_info(MYSQL_THD thd, struct connection_info *cn,
   {
     const struct mysql_event_general *event =
       (const struct mysql_event_general *) ev;
+    DBUG_PRINT("info", ("update_connection_info: before: event_subclass=%d, "
+                        "general_command=%.*s, cn->query_id=%lld, cn->query=%.*s, "
+                        "event->query_id=%lld, event->general_query=%.*s",
+                        event->event_subclass, event->general_command_length,
+                        event->general_command,
+                        cn->query_id,
+                        cn->query_length == 0x4f4f4f4f ? 0 : cn->query_length,
+                        cn->query == (const char *)0x4f4f4f4f4f4f4f4fL ? NULL : cn->query,
+                        event->query_id, event->general_query_length,
+                        event->general_query));
     switch (event->event_subclass) {
       case MYSQL_AUDIT_GENERAL_LOG:
       {
@@ -2127,8 +2147,8 @@ static void update_connection_info(MYSQL_THD thd, struct connection_info *cn,
           setup_connection_query(cn, event);
         else
           setup_connection_simple(cn);
-        break;
       }
+      break;
 
       case MYSQL_AUDIT_GENERAL_STATUS:
         if (event_query_command(event))
@@ -2136,10 +2156,14 @@ static void update_connection_info(MYSQL_THD thd, struct connection_info *cn,
           if (ci_needs_setup(cn))
             setup_connection_query(cn, event);
 
-          if (mode == 0 && cn->db_length == 0 && event->database.length > 0)
-            get_str_n(cn->db, &cn->db_length, sizeof(cn->db),
-                      event->database.str, event->database.length);
+          if (mode == 0)
+          {
+            if (cn->db_length == 0 && event->database.length > 0)
+              get_str_n(cn->db, &cn->db_length, sizeof(cn->db),
+                        event->database.str, event->database.length);
 
+            cn->query_id= event->query_id;
+          }
           if (event->general_error_code == 0)
           {
             /* We need to check if it's the USE command to change the DB */
@@ -2159,6 +2183,7 @@ static void update_connection_info(MYSQL_THD thd, struct connection_info *cn,
           update_general_user(cn, event);
         }
         break;
+
       case MYSQL_AUDIT_GENERAL_ERROR:
         /*
           We need this because the MariaDB returns NULL query field for the
@@ -2175,6 +2200,16 @@ static void update_connection_info(MYSQL_THD thd, struct connection_info *cn,
         break;
       default:;
     }
+    DBUG_PRINT("info", ("update_connection_info: after: event_subclass=%d, "
+                        "general_command=%.*s, cn->query_id=%lld, cn->query=%.*s, "
+                        "event->query_id=%lld, event->general_query=%.*s",
+                        event->event_subclass, event->general_command_length,
+                        event->general_command,
+                        cn->query_id,
+                        cn->query_length == 0x4f4f4f4f ? 0 : cn->query_length,
+                        cn->query == (const char *)0x4f4f4f4f4f4f4f4fL ? NULL : cn->query,
+                        event->query_id, event->general_query_length,
+                        event->general_query));
     break;
   }
   case MYSQL_AUDIT_TABLE_CLASS:
@@ -2292,6 +2327,7 @@ void auditing(MYSQL_THD thd, unsigned int event_class, const void *ev)
     {
       log_statement(cn, event, "QUERY");
       cn->query_length= 0; /* So the log_current_query() won't log this again. */
+      cn->query_id= 0;
       cn->log_always= 0;
     }
   }
